@@ -6,8 +6,9 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id "io.freefair.lombok" version "5.0.0-rc6"
 }
-sourceCompatibility = '13'
-targetCompatibility = '13'
+
+
+
 mainClassName = 'edu.wpi.teamF.Main'
 
 repositories {
@@ -20,7 +21,7 @@ repositories {
 
 dependencies {
     implementation(
-            'com.jfoenix:jfoenix:8.0.9',
+            'com.jfoenix:jfoenix:9.0.9',
 
             // You may comment out the database dependency you do not use
             'org.xerial:sqlite-jdbc:3.30.1',
@@ -38,10 +39,16 @@ dependencies {
             'org.testfx:openjfx-monocle:8u76-b04',
     )
     implementation 'org.testng:testng:6.9.6'
+    implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
+
+    compile 'org.slf4j:slf4j-simple:1.6.+'
+    compile 'com.sparkjava:spark-core:2.5.+'
+    compile 'com.twilio.sdk:twilio:7.+'
 }
 
 javafx {
-    version = "13"
+    version = "11"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -58,57 +65,68 @@ jar {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
-/*
-jacoco {
-    toolVersion = "0.8.4"
+
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
 }
+//
+//jacoco {
+//    toolVersion = "0.8.4"
+//}
+//
+//jacocoTestCoverageVerification {
+//    violationRules {
+//        rule {
+//            element = 'CLASS'
+//            limit {
+//                counter = 'CLASS'
+//                value = 'COVEREDRATIO'
+//                minimum = 1.0
+//            }
+//            excludes = [
+//                    'edu.wpi.teamF.App',
+//                    'edu.wpi.teamF.Main',
+//            ]
+//        }
+//
+//        rule {
+//            element = 'CLASS'
+//            limit {
+//                counter = 'LINE'
+//                value = 'COVEREDRATIO'
+//                minimum = 0.25
+//            }
+//            excludes = [
+//                    'edu.wpi.teamF.App',
+//                    'edu.wpi.teamF.Main',
+//            ]
+//        }
+//
+//        rule {
+//            element = 'CLASS'
+//            limit {
+//                counter = 'BRANCH'
+//                value = 'COVEREDRATIO'
+//                minimum = 0.25
+//            }
+//            excludes = [
+//                    'edu.wpi.teamF.App',
+//                    'edu.wpi.teamF.Main',
+//            ]
+//        }
+//    }
+//}
+//
+//check.dependsOn jacocoTestCoverageVerification
+//jacocoTestCoverageVerification.dependsOn jacocoTestReport
 
-jacocoTestCoverageVerification {
-    violationRules {
-        rule {
-            element = 'CLASS'
-            limit {
-                counter = 'CLASS'
-                value = 'COVEREDRATIO'
-                minimum = 1.0
-            }
-            excludes = [
-                    'edu.wpi.teamF.App',
-                    'edu.wpi.teamF.Main',
-            ]
-        }
-
-        rule {
-            element = 'CLASS'
-            limit {
-                counter = 'LINE'
-                value = 'COVEREDRATIO'
-                minimum = 0.25
-            }
-            excludes = [
-                    'edu.wpi.teamF.App',
-                    'edu.wpi.teamF.Main',
-            ]
-        }
-
-        rule {
-            element = 'CLASS'
-            limit {
-                counter = 'BRANCH'
-                value = 'COVEREDRATIO'
-                minimum = 0.25
-            }
-            excludes = [
-                    'edu.wpi.teamF.App',
-                    'edu.wpi.teamF.Main',
-            ]
-        }
-    }
-}
-
-check.dependsOn jacocoTestCoverageVerification
-jacocoTestCoverageVerification.dependsOn jacocoTestReport
-*/
 compileJava.dependsOn 'spotlessApply'
 
 // uncomment to enable spotless checking
@@ -116,4 +134,15 @@ spotless {
     java {
         googleJavaFormat()
     }
+}
+
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
 }
